@@ -29,6 +29,7 @@ PHP                                                                        NEWS
 - Added support for CURLOPT_CERTINFO. FR #49253.
   (Linus Nielsen Feltzing <linus@haxx.se>)
 - Added client-side server name indication support in openssl. (Arnaud)
+- Added stream_resolve_include_path() (Mikko)
 
 - Improved fix for bug #50006 (Segfault caused by uksort()). (Stas)
 
